--- a/src/css/nubia-index.less
+++ b/src/css/nubia-index.less
@@ -159,6 +159,7 @@ h2{
                 color:white;
             }
             .shopCarTipNav {
+                overflow: hidden;
                 width: 15px;
                 height: 15px;
                 border-radius: 50%;
